# moving_object_detection

./: README.md
epipolar_detector/: CMakeLists.txt  epipolardetector.cpp  epipolardetector.h  main.cpp
epipolar_detector/images/: baselink2imu.txt  gpspose.txt  imu2cameraleft.txt  imudata.txt
optical_flow/: CMakeLists.txt  main.cpp
